Commit trc khi pull

--- a/DaoBlissWebApp/Pages/ProductDetail.cshtml
+++ b/DaoBlissWebApp/Pages/ProductDetail.cshtml
@@ -1,6 +1,6 @@
 ﻿@page
 @model DaoBlissWebApp.Pages.ProductDetailModel
-@{ViewData["Title"] = "Về chúng tôi";
+@{ViewData["Title"] = "Chi tiết sản phẩm";
     Layout = "~/Pages/Shared/_Layout.cshtml";
     }
     <html lang="vi">
