--- a/DaoBlissWebApp/Pages/ProductList.cshtml
+++ b/DaoBlissWebApp/Pages/ProductList.cshtml
@@ -1,6 +1,6 @@
 ﻿@page
 @model DaoBlissWebApp.Pages.ProductListModel
-@{ViewData["Title"] = "Về chúng tôi";
+@{ViewData["Title"] = "Mua sắm";
     Layout = "~/Pages/Shared/_Layout.cshtml";
     }
     <html lang="vi">
