--- a/DaoBlissWebApp/Pages/HomePage.cshtml
+++ b/DaoBlissWebApp/Pages/HomePage.cshtml
@@ -144,7 +144,7 @@
         <div class="grid grid-cols-1 sm:grid-cols-2 gap-6">
             <article>
                 <img alt="Green herbal leaves growing in soil closeup" class="w-full h-64 object-cover rounded-lg" height="600" src="https://storage.googleapis.com/a1aa/image/bddfb948-84ff-4db7-e147-f0b33ec3b6ab.jpg" width="600" />
-                <h4 class="mt-3 text-lg font-medium" style="font-family: 'Roboto', sans-serif;">Hoàng Liên - Vị thuốc đáng nhất nhưng quý nhất</h4>
+                <h4 class="mt-3 text-lg font-medium" style="font-family: 'Roboto', sans-serif;">Hoàng Liên - Vị thuốc đắng nhất nhưng quý nhất</h4>
                 <p class="text-base text-[#4a4a4a] mt-1 font-sans font-light">Hoàng Liên là một trong những vị thuốc quý phát triển đặc biệt tốt trên dãy Hoàng Liên Sơn...</p>
             </article>
             <article>
